# dungeons-and-dragons-index-bot

./: .gitignore  Cargo.toml  Procfile  README.md  build.rs  local-run-template
.github/workflows/: bot-ci.yml  deploy.yml
data/: eng.json  ita.json
src/: commands.rs  eng_items.rs  ita_items.rs  langs_strs.rs  main.rs
src/items/: eng_items.rs  ita_items.rs
