[package]
name = "dungeons-and-dragons-index-bot"
description = "A bot to retrieve the pages of an item from Dungeons and Dragons books."
version = "0.1.0"
authors = ["Luni-4 <luni-4@hotmail.it>"]
repository = "https://github.com/Luni-4/dungeons-and-dragons-index-bot"
license = "MIT"
keywords = ["telegram", "D&D5.0", "bot", "index"]
edition = "2018"

[build-dependencies]
phf_codegen = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
unidecode = "0.3.0"

[dependencies]
bytes = "0.5"
futures = "0.3"
phf = { version = "0.8.0", features = ["macros"] }
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
tokio = { version = "0.2", features = ["full"]}
