[package]
name = "dungeons-and-dragons-index-bot"
description = "A bot to retrieve the pages of an item from Dungeons and Dragons books."
version = "0.1.0"
authors = ["Luni-4 <luni-4@hotmail.it>"]
repository = "https://github.com/Luni-4/dungeons-and-dragons-index-bot"
license = "MIT"
keywords = ["telegram", "D&D5.0", "bot", "index"]
edition = "2018"

[build-dependencies]
phf_codegen = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
unidecode = "^0.3"

[dependencies]
bytes = "^0.5"
phf = { version = "^0.8", features = ["macros"] }

# Used to setup the bot
log = "^0.4"
pretty_env_logger = "^0.4"
tokio = { version =  "^0.2", features = ["rt-threaded", "macros"] }
teloxide = "^0.3"

# Used to setup a webhook
warp = "^0.2"
reqwest = "^0.10"
serde_json = "^1.0"
